ingress/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
        app.kubernetes.io/version: 1.1.1
        helm.sh/chart: ingress-nginx-4.0.16
    name: ingress-nginx-controller
    namespace: ingress-nginx
spec:
    minReadySeconds: 0
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
    template:
        metadata:
            labels:
                app.kubernetes.io/component: controller
                app.kubernetes.io/instance: ingress-nginx
                app.kubernetes.io/name: ingress-nginx
        spec:
            containers:
                - args:
                      - /nginx-ingress-controller
                      - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
                      - --election-id=ingress-controller-leader
                      - --controller-class=k8s.io/ingress-nginx
                      - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
                      - --validating-webhook=:8443
                      - --validating-webhook-certificate=/usr/local/certificates/cert
                      - --validating-webhook-key=/usr/local/certificates/key
                      - --http-port=32320
                  image: k8s.gcr.io/ingress-nginx/controller:v1.1.1@sha256:0bc88eb15f9e7f84e8e56c14fa5735aaa488b840983f87bd79b1054190e660de
                  imagePullPolicy: IfNotPresent
                  lifecycle:
                      preStop:
                          exec:
                              command:
                                  - /wait-shutdown
                  livenessProbe:
                      failureThreshold: 5
                      httpGet:
                          path: /healthz
                          port: 10254
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 10
                      successThreshold: 1
                      timeoutSeconds: 1
                  name: controller
                  ports:
                      - containerPort: 32320
                        name: http
                        protocol: TCP
                      - containerPort: 443
                        name: https
                        protocol: TCP
                      - containerPort: 8443
                        name: webhook
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /healthz
                          port: 10254
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 10
                      successThreshold: 1
                      timeoutSeconds: 1
                  resources:
                      limits:
                          cpu: 500m
                          memory: 256Mi
                  securityContext:
                      allowPrivilegeEscalation: true
                      capabilities:
                          add:
                              - NET_BIND_SERVICE
                          drop:
                              - ALL
                      runAsUser: 101
                  volumeMounts:
                      - mountPath: /usr/local/certificates/
                        name: webhook-cert
                        readOnly: true
            dnsPolicy: ClusterFirst
            nodeSelector:
                kubernetes.io/os: linux
            serviceAccountName: ingress-nginx
            terminationGracePeriodSeconds: 300
            volumes:
                - name: webhook-cert
                  secret:
                      secretName: ingress-nginx-admission
---
apiVersion: v1
kind: Service
metadata:
    # annotations: null
    labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
        app.kubernetes.io/version: 1.1.1
        helm.sh/chart: ingress-nginx-4.0.16
    name: ingress-nginx-controller
    namespace: ingress-nginx
spec:
    externalTrafficPolicy: Local
    ipFamilies:
        - IPv4
    ipFamilyPolicy: SingleStack
    ports:
        - appProtocol: http
          name: http
          port: 32320
          protocol: TCP
          targetPort: 32320
        - appProtocol: https
          name: https
          port: 443
          protocol: TCP
          targetPort: https
    selector:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/name: ingress-nginx
    type: LoadBalancer
